--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nayjest/grids": "^1.3.1",
+        "laravelcollective/html": "5",
+        "nayjest/laravel-doctrine-dbal": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
